# nr1b-analog-fw

./: CMakeLists.txt  LICENSE  README.md  pindefs.h  spi_switch.c
.github/workflows/: build.yaml
src/: main.c
